# Videogame

./: .gitignore  CMakeLists.txt  README.md  config.h  config.h.in  main.cpp
inc/: constants.hpp  items.hpp  player.hpp  settings.hpp
src/: items.cpp  player.cpp  settings.cpp
test/: backendtests.cpp  itemtests.cpp  playertests.cpp  settingtests.cpp
